# SoulBot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  INSTALL.md  LICENSE  README.md  README_CN.md  pyproject.toml  start.py
docs/guide/: 01-function-call-guide.md  02-soulbot-cmd-guide.md
examples/simple/: .env.example
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: style.css
src/soulbot/: __main__.py  cli.py  l2_splitter.py
tests/e2e/: e2e_verify.py  test_e2e_live.py
tests/test_acp/: test_acp_llm.py  test_acp_parse.py  test_acp_retry.py  test_acp_stability.py  test_base_client.py  test_binary.py  test_binary_unified.py  test_claude_client.py  test_config.py  test_cursor_client.py  test_gemini_client.py  test_openclaw_client.py  test_opencode_client.py  test_pool.py  test_provider_routing.py
tests/test_acp_services/: test_acp_request_dispatch.py  test_fs_service.py  test_fs_truncate.py  test_path_resolve.py  test_terminal_service.py
tests/test_agents/: test_base_agent.py  test_context.py  test_llm_agent.py  test_nested_agents.py  test_timeout.py  test_transfer.py  test_workflow_agents.py
tests/test_aisop/: test_aisop_integration.py  test_aisop_loader.py  test_aisop_plugin.py  test_aisop_prompt.py  test_aisop_schema.py  test_extensions.py
tests/test_artifacts/: test_artifact_service.py
tests/test_bus/: test_bus_dead_letters.py  test_bus_filter.py  test_bus_integration.py  test_bus_priority.py  test_bus_replay.py  test_bus_stats.py  test_event_bus.py
tests/test_commands/: test_cmd_executor.py  test_cmd_integration.py  test_cmd_parser.py  test_cmd_parser_edge.py  test_cmd_security.py
tests/test_connect/: test_telegram.py
tests/test_conversation/: test_file_cache.py  test_memory_cache.py  test_provider_session.py
tests/test_events/: test_event.py
tests/test_history/: test_history_import.py  test_history_service.py
tests/test_plugins/: test_plugin_communication.py  test_plugin_decorator.py  (+6 more)
(+289 files in other folders)
